test/error/StSwitchFloat.ci
public static class Test
{
	public static bool Run()
	{
		float f = 2.5;
		switch (f) { //ERROR: Switch on type float - expected int, enum or string
		case 1.5:
			return false;
		default:
			return false;
		}
	}
}
